[package]
name = "user_profiling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.11"
winapi = "0.3.9"

[target.'cfg(windows)'.dependencies]
datetime = "0.5.2"

[dependencies.windows]  
features = [  
"Win32_Foundation",
"Win32_System_Com",  
"Win32_UI_Shell", 
"Win32_UI_Shell_Common",
"Win32_System_Registry"
]  